fix scrollbar placement for main content

--- a/css/main.less
+++ b/css/main.less
@@ -36,10 +36,10 @@ body {
 
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 
   .page-content {
     overflow-y: auto;
+    flex-grow: 1;
   }
 
   .page-sidebar {
